--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -5952,12 +5952,15 @@ body .kbs .button {
   background-color: #134571;
   font-weight: bold;
   border: 0;
-  color: #fff !important;
+  color: #fff;
   padding: 1em 1.3em;
   margin-top: 1em;
 }
 body .kbs .button:hover {
   background: #000;
+}
+body .kbs .order-option .button {
+  color: #fff !important;
 }
 body .kbs .secondary {
   background: #fff;
