--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_typography.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_typography.scss
@@ -160,13 +160,16 @@ body {
           background-color: #134571;
         font-weight: bold;
         border: 0;
-        color: #fff !important;
+        color: #fff;
         padding: 1em 1.3em;
         margin-top: 1em;
 
         &:hover {
           background: #000;
         }
+      }
+      .order-option .button {
+          color: #fff !important;
       }
     .secondary {
       background: #fff;
