--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -55,7 +55,7 @@
 
                                 @if (Model.SeatType == SeatTypes.StdRRSeat)
                                 {
-                                    <td>Document Reading Room (All seats have camera stands)</td>
+                                    <td>Document reading room (All seats have camera stands)</td>
                                 }
                                 else
                                 {
@@ -87,7 +87,7 @@
     <div class="text-center">
         <div class="row">
             <div class="col-md-12">
-                <div id=“enter-your-details-timer” class="prompt-grey full-width warning-panel">
+                <div id="enter-your-details-timer" class="prompt-grey full-width warning-panel">
                     <h3>You have 20 minutes to enter your details.</h3>
                     <span id="timer">Complete this page by @($"{Model.ExpiredBy:hh:mm tt}") British Summer Time (BST).</span>
                     <small>If you do not complete the form by this time we will cancel your seat and you will need to start the process again.</small>
