--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -50,5 +50,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/mega-menu.js"></script>
     <script src="~/js/cookie-banner.js"></script>
+    <script src="~/js/book-a-reading-room-visit-0.0.1.js"></script>
 </body>
 </html>
