--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -108,7 +108,7 @@ ViewData["Title"] = "Booking confirmation";
     <div class="reservation-options">
         <div class="row">
             <div class="col-md-12">
-                <a class="button primary" href=""@Url.Action("OrderDocuments", "DocumentOrder",
+                <a class="button primary" href="@Url.Action("OrderDocuments", "DocumentOrder",
                                         new { bookingType = @Model.BookingType.ToStringURL(), bookingReference = Model.BookingReference, readerTicket = Model.ReaderTicket } )">Continue to your document order</a>
                 <a class="button secondary" href="@Url.Action("Booking", "ContinueLater")">I'd like to continue later</a>
             </div>
