Restyle order form

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
@@ -1,7 +1,13 @@
 ﻿<fieldset>
     <legend>Enter up to 12 documents (e.g. FO 371/114865)</legend>
-    <p>You can order between 1 and 12 documents.</p>
-    <p>Search the catalogue and note document references, and then enter the references in the order fields below.</p>
+    <p class="helper-text no-margin">Order between 1 and 12 documents.</p>
+    <p class="helper-text">
+        <a href="https://discovery.nationalarchives.gov.uk/"
+           target="_blank" rel="noreferrer noopenner">
+            Search our
+            catalogue to find catalogue references
+        </a>
+    </p>
 
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
@@ -74,21 +80,24 @@
 
 <fieldset>
     <legend>Enter up to 3 reserve documents (e.g. FO 371/114865)</legend>
-    <p>You can provide three reserve catalogue references in case your first choices are unavailable.</p>
+    <p class="helper-text">
+        You can provide three reserve catalogue references in case
+        your first choices are unavailable.
+    </p>
 
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
-            <label for="reserve-1">1</label>
+            <label for="reserve-1">A</label>
             <input id="reserve-1" name="reserve-1" type="text" />
         </div>
 
         <div class="order-form-field">
-            <label for="reserve-2">2</label>
+            <label for="reserve-2">B</label>
             <input id="reserve-2" name="reserve-2" type="text" />
         </div>
 
         <div class="order-form-field">
-            <label for="reserve-3">3</label>
+            <label for="reserve-3">C</label>
             <input id="reserve-3" name="reserve-3" type="text" />
         </div>
     </div>
