--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -10,7 +10,6 @@ a.button {
 .content-wrapper {
     min-height: 600px;
     background-color: #fff;
-
     margin-top: 0em;
     padding: 0em 0 10em 0;
 
@@ -19,6 +18,7 @@ a.button {
         margin-bottom: 0;
     }
 }
+
 .standfirst {
     font-size: 1.1em;
     margin-bottom: 3em !important;
@@ -35,6 +35,7 @@ a.button {
         font-family: $body_font;
     }
 }
+
 small {
     display: block;
 }
@@ -76,10 +77,12 @@ form {
             border: 2px solid #fff;
             padding: 1em !important;
         }
+
         td {
             width: 75%;
         }
     }
+
     button {
         font-size: 0.85em;
         margin-bottom: 3em;
@@ -209,6 +212,7 @@ form {
     legend, p {
         text-align: left;
     }
+
     legend {
         font-size: 19px;
     }
@@ -292,6 +296,7 @@ form {
         }
     }
 }
+
 .reader-ticket-form {
     legend {
         font-size: 1.1em;
@@ -452,16 +457,14 @@ form {
             color: #555;
             font-size: 0.85em;
             letter-spacing: -0.3px;
-
         }
+
         .active {
 
             .step {
-
                 color: #111;
                 padding-bottom: 0.3em;
                 border-bottom: 3px solid #333;
-
             }
 
             .step-number {
@@ -533,6 +536,7 @@ form {
         margin-right: 0.5em;
     }
 }
+
 .warning-panel {
     padding: 2em;
     background-color: #f2de00;
@@ -542,6 +546,7 @@ form {
         margin: 0.5em !important;
         font-weight: normal !important;
     }
+
     #timer {
         display: block;
         font-size: 1.15em;
@@ -580,7 +585,6 @@ form {
                     background: #000;
                 }
             }
-
         }
     }
 }
@@ -706,15 +710,30 @@ form {
 .mt-med {
     margin-top: 15px !important;
 }
+
 .mt-lg {
     margin-top: 25px !important;
 }
+
+.mb-med {
+    margin-bottom: 15px !important;
+}
+
+.mb-lg {
+    margin-bottom: 25px !important;
+}
+
 .secondary-info {
     font-size: 1em;
     display: block;
     margin-top: 0.3em;
     color: #555;
 }
+
 .no-padding {
     padding: 0 !important;
+}
+
+html {
+    scroll-behavior: smooth;
 }
