--- a/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
@@ -12,14 +12,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        If you have already reserved a space, you can use the form below to find your document order form.
-                        You will need to complete your document order at least <span class="bold-text">
-                        4 working days before your date of visit</span>. If you do not complete this step your visit will be
-                        automatically cancelled.
+                        If you have already reserved a space, you can use the form below to find your document
+                        order form. You will need to complete your document order at least <span class="bold-text">
+                            5 working days before your date of visit
+                        </span>. If you do not complete this step your visit
+                        will be automatically cancelled.
                     </p>
                     <p>
-                        You can return to amend or complete your document order at any point before the deadline. Once this date has
-                        passed, you can't change your document order as we will begin preparing your order for your visit.
+                        You can return to amend or complete your document order at any point before the
+                        deadline. Once this date has passed, you can't change your document order as we will
+                        begin preparing your order for your visit.
                     </p>
                 </div>
             </div>
@@ -32,24 +34,25 @@
                         @Html.ValidationSummary()
                         @Html.AntiForgeryToken()
                         <fieldset>
-                            <legend><label for="reference-number">Enter your booking reference number</label></legend>
-                            <p>
-                                This will have been shown on screen when you reserved your space or sent in your confirmation email, e.g. RR811-260-2036X
+                            <label for="reference-number">Enter your booking reference number</label>
+                            <p class="helper-text">
+                                This will have been shown on screen when you reserved your space or sent in your
+                                confirmation email, e.g. RR811-260-2036X
                             </p>
 
-                            <input id="reference-number" name="bookingReference" type="text" placeholder="Enter booking reference" required />
+                            <input id="reference-number" name="bookingReference" type="text" required />
                         </fieldset>
 
                         <fieldset>
-                            <legend><label for="reader-ticket-number">Enter your reader’s ticket number</label></legend>
-                            <p>
+                            <label for="reader-ticket-number">Enter your reader’s ticket number</label>
+                            <p class="helper-text">
                                 This can be found on your reader’s ticket, e.g. 102087
                             </p>
 
-                            <input id="reader-ticket-number" name="ticket" type="text" placeholder="Enter ticket number" required />
+                            <input id="reader-ticket-number" name="ticket" type="text" required />
                         </fieldset>
 
-                        <button type="submit" class="button">Return to your form ></button>
+                        <button type="submit" class="button">Return to your document order</button>
                     </form>
                 </div>
             </div>
