--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container content-wrapper">
 
-    <<section class="row" id="progress-bar">
+    <section class="row" id="progress-bar">
         <h2 class="sr-only">Progress</h2>
         <div class="col-md-12">
             <ol>
