--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_typography.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_typography.scss
@@ -200,7 +200,7 @@ body {
             }
         }
 
-        .order-option, .reservation-options {
+        .order-option, .reservation-options, .cancellation-form, .cancellation-details {
             a.button.primary {
                 color: #fff !important;
             }
