--- a/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
@@ -57,7 +57,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a class="button primary no-margin" href="@Url.Action("Index", "Home")">Book another visit ></a>
+                    <a class="button primary no-margin" href="@Url.Action("Index", "Home")">Book another visit</a>
                 </div>
             </div>
         </div>
