--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -218,7 +218,7 @@
                     </fieldset>
 
                     <div class="form-row">
-                        <button type="submit" class="button" name="submitbutton" value="reserve">Complete provisional booking ></button>
+                        <button type="submit" class="button" name="submitbutton" value="reserve">Complete provisional booking</button>
                     </div>
                 </div>
             </div>
