--- a/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
@@ -17,6 +17,17 @@
                     Your booking is provisional. Complete your document order form at any point before the deadline
                     otherwise your visit will be cancelled.
                 </p>
+
+                <ul>
+                    <li>
+                        <a href="https://discovery.nationalarchives.gov.uk">Go to Discovery - our catalogue to find your document references</a>
+                    </li>
+                    <li>
+                        <a href="https://www.nationalarchives.gov.uk/help-with-your-research/">See our research guides on how to get started in Discovery - our catalogue</a>
+                    </li>
+                </ul>
+
+                <p class="bold-text">Make sure you close your browser if you’re using a shared device.</p>
             </div>
         </div>
     </div>
